--- a/.gitignore
+++ b/.gitignore
@@ -1,49 +1,101 @@
-# History files
-.Rhistory
-.Rapp.history
+# Load Libraries
+library(ggplot2)
+library(dplyr)
+library(lubridate)
+library(caret)
+library(corrplot)
+library(readr)
+library(reshape2)
 
-# Session Data files
-.RData
-.RDataTmp
+# Load Dataset
+df <- read.csv("Supermart Grocery Sales - Retail Analytics Dataset.csv", stringsAsFactors = TRUE)
 
-# User-specific files
-.Ruserdata
+# Data Preprocessing
+df <- na.omit(df)
+df <- df[!duplicated(df), ]
 
-# Example code in package build process
-*-Ex.R
+# Convert Order Date
+df$Order.Date <- as.Date(df$Order.Date, format='%Y-%m-%d')
+df$Order.Day <- day(df$Order.Date)
+df$Order.Month <- month(df$Order.Date)
+df$Order.Year <- year(df$Order.Date)
 
-# Output files from R CMD build
-/*.tar.gz
+# Encode categorical variables
+df$Category <- as.numeric(factor(df$Category))
+df$Sub.Category <- as.numeric(factor(df$Sub.Category))
+df$City <- as.numeric(factor(df$City))
+df$Region <- as.numeric(factor(df$Region))
+df$State <- as.numeric(factor(df$State))
+df$Sales <- as.numeric(df$Sales)
 
-# Output files from R CMD check
-/*.Rcheck/
+# Exploratory Data Analysis
+# Boxplot
+ggplot(df, aes(x=factor(Category), y=Sales)) + 
+  geom_boxplot(fill='lightblue') +
+  ggtitle('Sales Distribution by Category') +
+  xlab('Category') +
+  ylab('Sales')
 
-# RStudio files
-.Rproj.user/
+# Sales Over Time
+sales_over_time <- df %>% group_by(Order.Date) %>% summarise(Total.Sales = sum(Sales))
+ggplot(sales_over_time, aes(x=Order.Date, y=Total.Sales)) + 
+  geom_line(color='blue') + 
+  ggtitle('Total Sales Over Time')
 
-# produced vignettes
-vignettes/*.html
-vignettes/*.pdf
+# Correlation Matrix
+cor_matrix <- cor(df %>% select_if(is.numeric))
+corrplot(cor_matrix, method='color', type='upper', tl.cex=0.8)
 
-# OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
-.httr-oauth
+# Sales by City
+ggplot(df, aes(x=factor(City), y=Sales)) + 
+  geom_bar(stat='summary', fun=mean, fill='skyblue') + 
+  ggtitle('Average Sales by City') + 
+  xlab('City') + 
+  ylab('Average Sales')
 
-# knitr and R markdown default cache directories
-*_cache/
-/cache/
+# Sales by Sub-Category
+ggplot(df, aes(x=factor(Sub.Category), y=Sales)) + 
+  geom_boxplot(fill='lightgreen') + 
+  ggtitle('Sales Distribution by Sub-Category') + 
+  xlab('Sub-Category') + 
+  ylab('Sales')
 
-# Temporary files created by R markdown
-*.utf8.md
-*.knit.md
+# Pie Chart: Region-wise Sales
+region_sales <- df %>% group_by(Region) %>% summarise(Total = sum(Sales))
+region_sales$Region <- as.factor(region_sales$Region)
+pie(region_sales$Total, labels=region_sales$Region, main="Sales Distribution by Region")
 
-# R Environment Variables
-.Renviron
+# Feature Selection and Model Building
+features <- df %>% select(-c(Order.ID, Customer.Name, Order.Date, Sales))
+target <- df$Sales
 
-# pkgdown site
-docs/
+# Split the Dataset
+set.seed(42)
+train_index <- createDataPartition(target, p=0.8, list=FALSE)
+X_train <- features[train_index, ]
+X_test <- features[-train_index, ]
+y_train <- target[train_index]
+y_test <- target[-train_index]
 
-# translation temp files
-po/*~
+# Normalize Data
+preprocess_params <- preProcess(X_train, method=c("center", "scale"))
+X_train <- predict(preprocess_params, X_train)
+X_test <- predict(preprocess_params, X_test)
 
-# RStudio Connect folder
-rsconnect/
+# Train Linear Regression Model
+model <- train(X_train, y_train, method='lm')
+y_pred <- predict(model, X_test)
+
+# Evaluate the Model
+mse <- mean((y_test - y_pred)^2)
+r2 <- cor(y_test, y_pred)^2
+print(paste('Mean Squared Error:', mse))
+print(paste('R-squared:', r2))
+
+# Actual vs Predicted Plot
+ggplot(data.frame(Actual=y_test, Predicted=y_pred), aes(x=Actual, y=Predicted)) +
+  geom_point(color='blue') +
+  geom_abline(slope=1, intercept=0, color='red') +
+  ggtitle('Actual vs Predicted Sales') +
+  xlab('Actual Sales') +
+  ylab('Predicted Sales')
